# ACES

./: .gitignore  pyproject.toml
agent/src/: typedefs.py
agent/src/core/: mllm.py
config/models/: ollama-gemma3-4b.yaml  ollama-granite3.2-2b.yaml  ollama-llava.yaml  ollama-qwen3-vl-2b.yaml
experiments/: config.py  engine_loader.py  filesystem_environment.py  hf_to_product_csv.py  product_csv_to_screenshots.py
experiments/local_datasets/: products_ace_bb_market_share.csv  products_ace_bb_market_share_with_screenshots.csv
experiments/runners/batch_runtime/: orchestrator.py
experiments/runners/headless_runtime/: base.py
experiments/runners/screenshot_runtime/: base.py
experiments/runners/services/: agent_simulator.py  experiment_loader.py
experiments/tests/: test_parallel_screenshot_conflicts.py
experiments/utils/: dataset_ops.py  screenshot_collector.py
sandbox/: app.py
tests/runners/: test_screenshot_runtime.py
